--- a/XYZReader/build.gradle
+++ b/XYZReader/build.gradle
@@ -34,4 +34,7 @@ dependencies {
     implementation "com.android.support:cardview-v7:$androidSupportVersion"
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
     implementation files('libs/volley.jar')
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
 }
